--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <parent>
         <groupId>com.lealone.plugins</groupId>
         <artifactId>lealone-plugins</artifactId>
-        <version>6.0.0-SNAPSHOT</version>
+        <version>6.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>lealone-postgresql</artifactId>
     <packaging>jar</packaging>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0</version>
 
     <dependencies>
         <dependency>
